# vocabserv

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
scripts/: resgen.py
src/: CMakeLists.txt  buffer.cpp  buffer.h  format.cpp  format.h  jutil.h  lmacro_begin.h  lmacro_end.h  message.cpp  message.h  server.cpp  server.h  vocabserv.cpp  vocabserv.h
src/res/: index.css  index.html  index.js
